--- a/src/components/molecules/UserTable/UserTable.scss
+++ b/src/components/molecules/UserTable/UserTable.scss
@@ -1,7 +1,6 @@
 .main-table {
   width: 75vw;
   position: relative;
-  margin-left: 250px;
   border-radius: 0.8rem;
   overflow: hidden;
   
